Job Position search done

--- a/jobs.html
+++ b/jobs.html
@@ -12,8 +12,10 @@
 <body>
     <header id="header" class="divider"></header>
         <main>
-            <a href="skills.html">Help me find my career according to my skills!</a>
-            <a href="jobs.html">Let's search some Job Offers!</a>
+            <label for="">Job Position: 
+                <input id="position-input" type="text" placeholder="e.g. 'Developer'">
+                <div id="results"></div>
+            </label>
         </main>
     <footer id="footer" class="divider"></footer>
     <script type="module" src="js/main.js"></script>
