--- a/skills.html
+++ b/skills.html
@@ -12,8 +12,12 @@
 <body>
     <header id="header" class="divider"></header>
         <main>
-            <a href="skills.html">Help me find my career according to my skills!</a>
-            <a href="jobs.html">Let's search some Job Offers!</a>
+            <form action="">
+                <label for="skills">
+                    Select one of your skills
+                    <select name="skills" id="skills"></select>
+                </label>
+            </form>
         </main>
     <footer id="footer" class="divider"></footer>
     <script type="module" src="js/main.js"></script>
