2nd API added and final details

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
     <header id="header" class="divider"></header>
         <main>
-            <a href="skills.html">Help me find my career according to my skills!</a>
             <a href="jobs.html">Let's search some Job Offers!</a>
         </main>
+    <p id="visits">Visits: <span id="pagevisits"></span></p>
     <footer id="footer" class="divider"></footer>
     <script type="module" src="js/main.js"></script>
+    <script src="js/visits.js"></script>
 </body>
 </html>
