--- a/jobs.html
+++ b/jobs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YourFuture | Home</title>
+    <title>YourFuture | JobSearch</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <!-- Content Security Policy -->
@@ -14,7 +14,9 @@
         <main>
             <label for="">Job Position: 
                 <input id="position-input" type="text" placeholder="e.g. 'Developer'">
+                Powered by USA Jobs
                 <div id="results"></div>
+                <div id="city-overlay" class="overlay" style="display: none;"></div>
             </label>
         </main>
     <footer id="footer" class="divider"></footer>
